@@ -32,6 +32,8 @@
 		<sonar.projectKey>EnesAkyel_movie-catalog-api</sonar.projectKey>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<gatling.version>3.15.1</gatling.version>
+		<gatling-maven-plugin.version>4.9.6</gatling-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -72,6 +74,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.gatling.highcharts</groupId>
+			<artifactId>gatling-charts-highcharts</artifactId>
+			<version>${gatling.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -109,6 +117,19 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>io.gatling</groupId>
+				<artifactId>gatling-maven-plugin</artifactId>
+				<version>${gatling-maven-plugin.version}</version>
+				<configuration>
+				<jvmArgs>
+						<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
+						<jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
+						<jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
+						<jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
+					</jvmArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
